# crew-research

./: .crew-config.yaml  .gitattributes  .gitignore  .mise.local.toml.example  AGENTS.md  CHANGELOG.md  README.md  SETUP.md  debounce.ts  mise.toml
.memory/: CONTEXT.md  archwright-forces-tkt.yaml  archwright-survey.md  archwright-tensions-tkt.yaml  session-reviews.md
.scratch/: HANDOFF.md  claude-code-architecture.md  cross-tool-context-findings.md  generator-architecture.md  research-prompt-arguments.md  spike-s1-results.md  spike-s2-results.md  spike-s3-results.md  spike-s4-results.md  spike-s5-results.md  spike-s6-s7-results.md
.tickets/: 01-fix-p0-skill-defects.md  01-rerun-eval-suite.md  02-dedupe-stale-skill-content.md  (+48 more)
tools/recall/: Invoke-RecallIngestAll.ps1  bashrc-hook.sh  ingest-all.sh  profile-hook.ps1  pyproject.toml
tools/recall/recall/: __init__.py  chunker.py  cli.py  embedder.py  normalize.py  store.py
tools/recall/spike/: harness.py  requirements.txt  results_all-MiniLM-L6-v2.json  results_bge-base-en-v1.5-int8.json  results_bge-large-en-v1.5-int8.json  results_embeddinggemma-300m.json  results_mxbai-embed-large-v1.json  results_nomic-embed-text-v1.5.json  results_snowflake-arctic-embed-m-v2.0.json  run_all.py  spike_a_minilm.py  spike_b_nomic.py  spike_c_embeddinggemma.py  spike_d_snowflake.py  spike_e_qwen3.py  spike_f_mxbai.py  spike_g_bge_base.py  spike_h_bge_large.py
tools/tkt/: pyproject.toml
tools/tkt/tests/: conftest.py  test_blackbox.py  test_hardening.py  test_rollout.py  test_tkt.py
tools/tkt/tkt/: cli.py  core.py  gitio.py
(+662 files in other folders)
